test/oscar/compiler/errors/idNotFound.oscar
def main() => unit = {
  int x = y;
}